<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.adosat.adosat.project">

    <TextView
        android:text="@string/Projects"
        android:layout_centerHorizontal="true"
        android:id="@+id/Projects"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <ScrollView
        android:scrollbars="none"
        android:layout_below="@+id/Projects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/proj29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            

            <ImageView
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/divider"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
